--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,18 +1,21 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
+       android:id="@+id/LinearLayout1"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text="@string/questionNumber"
         android:id="@+id/txtQNumber"
-        android:gravity="right"
-        android:layout_gravity="right"
+        android:gravity="end"
+        android:layout_gravity="end"
         android:textSize="15sp" />
 
     <TextView
@@ -64,7 +67,7 @@
             android:text="@string/Radio3"
             android:textSize="20sp" />
 
-    </RadioGroup>
+            </RadioGroup>
 
     <TextView
         android:id="@+id/textViewReference"
@@ -81,6 +84,7 @@
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/str_next" />
-
+        android:text="@string/str_next"
+        android:gravity="center"/>
 </LinearLayout>
+    </ScrollView>
